--- a/stem.html
+++ b/stem.html
@@ -26,7 +26,7 @@
     id="bd"
   >
     <div
-      class="max-w-4xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0"
+      class="max-w-4xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0 opacity-75"
     >
       <!--Main Col-->
       <div
