--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <div class="p-4 md:p-12 text-center lg:text-left">
-      <div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 "><img class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48  bg-center" src="/bumblebee-2008/images/me3.png" alt="Hridhuun's Profile Picture" /></div>
+      <div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 "><img class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48  bg-center" src="/images/me3.png" alt="Hridhuun's Profile Picture" /></div>
 
       <h1 class="text-3xl font-bold pt-8 lg:pt-0">Hridhuun Savant</h1>
       <div class="mx-auto lg:mx-0 w-4/5 pt-2 border-b-2 border-green-500 opacity-25"></div>
@@ -36,9 +36,9 @@
       <p class="pt-2 text-base lg:text-sm flex items-center justify-center lg:justify-start"><i class="fa-solid fa-location-arrow text-green-700 fa h-4 fill-current pr-5"></i> Mumbai, India.</p>
       <p class="pt-8 text-sm">I'm Hridhuun, a 17-year-old with a passion for technology and the outdoors. As a self-taught software developer, I've honed my skills in coding and programming, and I'm always eager to learn more about the latest advancements in electronics. In addition to my academic pursuits, I'm also a competitive rifle shooter at the national level. When I'm not studying or competing, I enjoy playing the keyboard and capturing life's moments through photography.</p>
       <div class="pt-8 pb-6 flex flex-wrap items-center justify-between">
-        <a href="/bumblebee-2008/achievements"><button class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
+        <a href="/achievements"><button class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
           List of Achievements
-        </button></a><a href="/bumblebee-2008/library"><button class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 my-2 rounded-full">Photography Library</button></a> 
+        </button></a><a href="/library"><button class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 my-2 rounded-full">Photography Library</button></a> 
       </div>
       
 
@@ -57,7 +57,7 @@
   </div>
 
   <div class="w-full lg:w-2/5 -ml-6" style="z-index: 10;">
-    <img src="/bumblebee-2008/images/me.JPG" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block ">
+    <img src="/images/me.JPG" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block ">
 
   </div>
 
@@ -105,7 +105,7 @@
     tippy('.link',{
       placement: 'bottom'
     })
-    document.body.style.backgroundImage = "url('/bumblebee-2008/images/bg"+(Math.floor(Math.random() * 3) + 1)+".jpg')";
+    document.body.style.backgroundImage = "url('/images/bg"+(Math.floor(Math.random() * 3) + 1)+".jpg')";
 
     const toggle = document.querySelector('.js-change-theme');
     const body = document.querySelector('body');
