--- a/stem.html
+++ b/stem.html
@@ -66,7 +66,7 @@
       <!-- Pin to top right corner -->
       <div class="absolute top-0 right-0 h-12 w-18 p-4">
         <button class="js-change-theme focus:outline-none">🌙</button>
-        <a href="/bumblebee-2008/"
+        <a href="/"
           ><button class="focus:outline-none"><i class="fa fa-home"></i></button
         ></a>
       </div>
@@ -74,7 +74,7 @@
 
     <script>
       document.body.style.backgroundImage =
-        "url('/bumblebee-2008/images/bg" + (Math.floor(Math.random() * 3) + 1) + ".jpg')";
+        "url('/images/bg" + (Math.floor(Math.random() * 3) + 1) + ".jpg')";
 
       //Toggle mode
       const toggle = document.querySelector(".js-change-theme");
