--- a/stem.html
+++ b/stem.html
@@ -22,7 +22,7 @@
 
   <body
     class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover bg-no-repeat h-screen p-6"
-    style="background-image:url(`bg${ Math.random()}.jpg`); "
+    style="background-attachment:fixed;background-image:url(`bg${ Math.random()}.jpg`); "
     id="bd"
   >
     <div
@@ -31,7 +31,7 @@
       <!--Main Col-->
       <div
         id="profile"
-        class="w-full lg:w-full rounded-lg lg:rounded-l-lg lg:rounded-r-lg shadow-2xl bg-white opacity-75 mx-6 lg:mx-0 my-6"
+        class="w-full lg:w-full rounded-lg lg:rounded-l-lg lg:rounded-r-lg shadow-2xl bg-white lg:opacity-100 mx-6 lg:mx-0 my-6 "
       >
         <div class="p-4 md:p-12 text-center lg:text-left">
           <h1 class="text-3xl font-bold pt-8 lg:pt-0">Academic & STEM Related Achievements</h1>
@@ -74,7 +74,7 @@
 
     <script>
       document.body.style.backgroundImage =
-        "url('/images/bg" + (Math.floor(Math.random() * 3) + 1) + ".jpg')";
+        "url('/bg" + (Math.floor(Math.random() * 3) + 1) + ".jpg')";
 
       //Toggle mode
       const toggle = document.querySelector(".js-change-theme");
