--- a/achievements.html
+++ b/achievements.html
@@ -81,7 +81,7 @@
     </div>
 
     <script>
-      document.body.style.backgroundImage = "url('/bg" + (Math.floor(Math.random() * 3) + 1) + ".jpg')";
+      document.body.style.backgroundImage = "url('/images/bg" + (Math.floor(Math.random() * 3) + 1) + ".jpg')";
 
       //Toggle mode
       const toggle = document.querySelector(".js-change-theme");
