--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <div class="p-4 md:p-12 text-center lg:text-left">
-      <div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 "><img class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48  bg-center" src="/me3.png" alt="Hridhuun's Profile Picture" /></div>
+      <div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 "><img class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48  bg-center" src="/images/me3.png" alt="Hridhuun's Profile Picture" /></div>
 
       <h1 class="text-3xl font-bold pt-8 lg:pt-0">Hridhuun Savant</h1>
       <div class="mx-auto lg:mx-0 w-4/5 pt-2 border-b-2 border-green-500 opacity-25"></div>
@@ -57,7 +57,7 @@
   </div>
 
   <div class="w-full lg:w-2/5 -ml-6" style="z-index: 10;">
-    <img src="/me.JPG" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block ">
+    <img src="/images/me.JPG" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block ">
 
   </div>
 
@@ -105,7 +105,7 @@
     tippy('.link',{
       placement: 'bottom'
     })
-    document.body.style.backgroundImage = "url('/bg"+(Math.floor(Math.random() * 3) + 1)+".jpg')";
+    document.body.style.backgroundImage = "url('/images/bg"+(Math.floor(Math.random() * 3) + 1)+".jpg')";
 
     const toggle = document.querySelector('.js-change-theme');
     const body = document.querySelector('body');
