--- a/library.html
+++ b/library.html
@@ -203,7 +203,7 @@
 
     <script>
       document.body.style.backgroundImage =
-        "url('/bg" + (Math.floor(Math.random() * 3) + 1) + ".jpg')";
+        "url('/images/bg" + (Math.floor(Math.random() * 3) + 1) + ".jpg')";
 
       //Toggle mode
       const toggle = document.querySelector(".js-change-theme");
