--- a/shooting.html
+++ b/shooting.html
@@ -47,7 +47,7 @@
 
                   </ul>
                 </div>
-                  <div class="w-full m-2 p-4 place-content-center rounded-lg shadow-lg h-64 bg-cover " style="background-image:url('/rs2.jpeg')"></div><div>
+                  <div class="w-full m-2 p-4 place-content-center rounded-lg shadow-lg h-64 bg-cover " style="background-image:url('/images/rs2.jpeg')"></div><div>
                   <ul class="list m-4 rounded-lg lg:shadow-lg">
 
                     <li class="m-2">DSO District Shooting Competition - U19/Boys Open Sight Rifle - Gold</li>
@@ -56,9 +56,9 @@
 
                   </ul>
                 </div>
-                <div class="w-full m-2 place-content-center rounded-lg shadow-lg h-64 bg-cover " style="background-image:url('/rs1.jpeg')"></div>
-                <div class="w-full m-2 place-content-center rounded-lg shadow-lg h-96 bg-cover " style="background-image:url('/rs3.jpeg')"></div>
-                <div class="w-full mt-2 mx-2 place-content-center rounded-lg shadow-lg h-96 bg-cover " style="background-image:url('/rs4.jpeg')"></div>
+                <div class="w-full m-2 place-content-center rounded-lg shadow-lg h-64 bg-cover " style="background-image:url('/images/rs1.jpeg')"></div>
+                <div class="w-full m-2 place-content-center rounded-lg shadow-lg h-96 bg-cover " style="background-image:url('/images/rs3.jpeg')"></div>
+                <div class="w-full mt-2 mx-2 place-content-center rounded-lg shadow-lg h-96 bg-cover " style="background-image:url('/images/rs4.jpeg')"></div>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
 
               </ul>
             </div>
-              <div class="w-full m-2 p-4 place-content-center rounded-lg shadow-lg h-52 bg-cover " style="background-image:url('/rs2.jpeg')"></div><div>
+              <div class="w-full m-2 p-4 place-content-center rounded-lg shadow-lg h-52 bg-cover " style="background-image:url('/images/rs2.jpeg')"></div><div>
               <ul class="list m-4 rounded-lg lg:shadow-lg">
                 
                 <li class="m-2">DSO District Shooting Competition - U19/Boys Open Sight Rifle - Gold</li>
@@ -103,9 +103,9 @@
 
               </ul>
             </div>
-            <div class="w-full m-2 place-content-center rounded-lg shadow-lg h-52 bg-cover " style="background-image:url('/rs1.jpeg')"></div>
-            <div class="w-full m-2 place-content-center rounded-lg shadow-lg h-52 bg-cover " style="background-image:url('/rs3.jpeg')"></div>
-            <div class="w-full mt-2 mx-2 place-content-center rounded-lg shadow-lg h-52 bg-cover " style="background-image:url('/rs4.jpeg')"></div>
+            <div class="w-full m-2 place-content-center rounded-lg shadow-lg h-52 bg-cover " style="background-image:url('/images/rs1.jpeg')"></div>
+            <div class="w-full m-2 place-content-center rounded-lg shadow-lg h-52 bg-cover " style="background-image:url('/images/rs3.jpeg')"></div>
+            <div class="w-full mt-2 mx-2 place-content-center rounded-lg shadow-lg h-52 bg-cover " style="background-image:url('/images/rs4.jpeg')"></div>
           </div>
         </div>
       </div>
@@ -122,9 +122,9 @@
     <script>
       const n = Math.floor(Math.random() * 3) + 1;
       document.body.style.backgroundImage =
-      "url('/bg" + (n) + ".jpg')";
+      "url('/images/bg" + (n) + ".jpg')";
       document.getElementById("profile").style.backgroundImage =
-      "url('/bg" + (n) + ".jpg')";
+      "url('/images/bg" + (n) + ".jpg')";
 
       //Toggle mode
       const toggle = document.querySelector(".js-change-theme");
