--- a/achievements.html
+++ b/achievements.html
@@ -42,7 +42,7 @@
             class="mx-auto lg:mx-0 w-full pt-2 border-b-2 border-green-500 opacity-25"
           ></div>
           <div class="flex justify-center lg:m-12 flex-wrap">
-            <div onclick="window.location.href='/achievements/shooting'"
+            <div onclick="window.location.href='/shooting'"
               class="rounded-lg shadow-lg w-full md:w-1/2 p-6 h-70 text-white font-bold text-center opacity-100 hover:opacity-70 bg-center bg-cover m-4 text-base border border-8 border-black "
               style="
                 background-image: url(&quot;https://www.spss.edu.in/images/Rifle_Shooting/IMG_9923.jpg&quot;);
@@ -50,7 +50,7 @@
             >
               Rifle Shooting
             </div>
-            <div onclick="window.location.href='/achievements/stem'"
+            <div onclick="window.location.href='/stem'"
               class="rounded-lg shadow-lg w-full md:w-1/2 p-6 h-70 text-white font-bold text-center opacity-100 hover:opacity-70 bg-cover bg-center m-4 text-base border border-8 border-black"
               style="
                 background-image: url(&quot;https://images.ctfassets.net/3u44qrj81gob/1hRgX5341BAa0kGKJZJaAJ/bb42331a9beac6fb06f441bb50b53c47/STEM_Competitions_for_Middle_School_Students.jpg&quot;);
