--- a/library.html
+++ b/library.html
@@ -116,6 +116,14 @@
 
 
                       </div>
+                      <div class="flex flex-col mb-10 content-center mx-3  w-4/6">
+                        <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" onclick="javascript:updateNew()" id="btt">
+                          Load More
+                        </button>
+
+
+                      </div>
+                      
                     </div>
                   </div>
                   <div class="lightbox" id="lightbox">
@@ -145,10 +153,12 @@
           //const arr = [(1,2,3),(4,5,6),(7,8,9),(10,11,12),(13,14,15),(17,16),{18,19,20},{21,22,23},{24,25,26},{27,28,31},{32,29},{35,33},{38,34},{39,37}]
           const arr = [[41,45],[7,8,9],[17,16],[10,11,12],[42,46],[13,14,15],[43,47],[18,19,20],[44,49],[21,22,23],[32,29],[24,25,26],[48,50],[27,28,31],[35,33],[38,34],[1,2,3],[54,51],[39,37],[4,5,6],[55,52],[56,53]] 
           let count =1;
+          let checkpoints=[6,6,5,5];
+          let checkpoint = 6;
+          let cp=1;
 
-          let d = ``;
-          for(let i=0;i<arr.length;i++){
-            console.log(arr[i])
+          let d = document.getElementById("gallimgs").innerHTML;
+          for(let i=0;i<checkpoint;i++){
             if(arr[i].length==2){
               d+=`<div class="grid md:grid-cols-12 gap-8 lg:mb-11 mb-7 ">
                           <div class="md:col-span-4 md:h-[404px] h-[277px] w-full rounded-3xl ">
@@ -173,8 +183,39 @@
                         </div>`
             }
           }
-          console.log((d))
           document.getElementById("gallimgs").innerHTML=d;
+          function updateNew(){
+            cp+=1;
+            checkpoint+=checkpoints[cp-1];
+            for(let i=checkpoints[cp-1];i<checkpoint+checkpoints[cp];i++){
+              if(arr[i].length==2){
+                d+=`<div class="grid md:grid-cols-12 gap-8 lg:mb-11 mb-7 ">
+                            <div class="md:col-span-4 md:h-[404px] h-[277px] w-full rounded-3xl ">
+                                <img src="/gallery/${arr[i][0]}.jpg" alt="Gallery image" class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-700 ease-in-out mx-auto lg:col-span-4 md:col-span-6 w-full h-full">
+                              </div>
+                              <div class="md:col-span-8 md:h-[404px] h-[277px] w-full rounded-3xl">
+                                <img src="/gallery/${arr[i][1]}.jpg" alt="Gallery image" class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-700 ease-in-out mx-auto lg:col-span-8 md:col-span-6 w-full h-full">
+                              </div>
+                          </div>`
+              }
+              else{
+                d+=`<div class="grid md:grid-cols-3 grid-cols-1 gap-8 mb-7">
+                            <div class="h-[277px] w-full rounded-3xl">
+                              <img src="/gallery/${arr[i][0]}.jpg" alt="Gallery image" class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-700 ease-in-out mx-auto w-full h-full">
+                            </div>
+                            <div class="h-[277px] w-full rounded-3xl">
+                              <img src="/gallery/${arr[i][1]}.jpg" alt="Gallery image" class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-700 ease-in-out mx-auto w-full h-full">
+                            </div>
+                            <div class="h-[277px] w-full rounded-3xl">
+                              <img src="/gallery/${arr[i][2]}.jpg" alt="Gallery image" class="gallery-image object-cover rounded-3xl hover:grayscale transition-all duration-700 ease-in-out mx-auto w-full h-full">
+                            </div>
+                          </div>`
+              }
+            }
+            document.getElementById("gallimgs").innerHTML=d;
+            if(cp==3){document.getElementById("btt").style.display="none";}
+
+          }
 
 
           // Close lightbox when close button is clicked
