--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             When my parents heard that I was doing programming, they were upset at first. But I was able to convince them that I was doing it for a positive and meaningful cause.<br><br>
 
             <span class="text-xl font-bold">Returning to Shooting:</span><br><br>
-            The lockdown was eventually called off, and life returned to normal. Unfortunately, I was not permitted to keep filming in 9th and 10th grade, as these grades were precious years in academics.<br>
+            The lockdown was eventually called off, and life returned to normal. Unfortunately, I was not permitted to resume shooting in 9th and 10th grade, as these grades were precious years in academics.<br>
             I continued shooting in 11th grade, and after only four months, I was playing my first nationals. I trained daily for four hours, and the hard work paid off. I won my first national medal in shooting.
             <br><br>
             <span class="text-xl font-bold">The Future:</span><br><br>
