--- a/LearnPiano/index.html
+++ b/LearnPiano/index.html
@@ -6,7 +6,7 @@
     <title>LearnPiano - MIDI Practice</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./learnpiano/tailwind.css" />
+    <link rel="stylesheet" href="./tailwind.css" />
 
 
     <meta name="color-scheme" content="dark" />
@@ -303,6 +303,6 @@
       </div>
     </div>
 
-    <script type="module" src="./learnpiano/script.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
